test/e2e/fixtures/queryparameter-routing/queries.json
[
  {
    "url": "/queryparameter-routing/",
    "method": "GET"
  },
  {
    "url": "/queryparameter-routing/?test_param=target2",
    "method": "GET"
  }
]
